<resources>
    <string name="app_name">DoctorPatientApp</string>
    <string name="medical_condition_add_button">Add Condition</string>
    <string name="add_medical_condition_field_1">Title:</string>
    <string name="add_medical_condition_field_2">Description:</string>
    <string name="add_medical_condition_edit_field_1">Title</string>
    <string name="add_medical_condition_edit_field_2">Description</string>
    <string name="add_medical_condition_cancel_button">Cancel</string>
    <string name="add_medical_condition_delete_button">Delete Condition</string>
    <string name="default_nav_bar_text">Patient Name</string>
    <string name="doctor_default_nav_bar_text">Doctor Name</string>
    <string name="menu_item_1_patient">Patient Profile</string>
    <string name="menu_item_2_patient">Medical Condition</string>
    <string name="menu_item_3_patient">Consult a Doctor</string>
    <string name="menu_item_4_patient">Facilities near me</string>
    <string name="menu_item_5_patient">Doctor\'s Feedback</string>
    <string name="menu_item_6_patient">Log out</string>
    <string name="profile_surname_text">Surname:</string>
    <string name="profile_othername_text">Name:</string>
    <string name="profile_gender_text">Gender:</string>
    <string name="profile_age_text">Age:</string>
    <string name="profile_height_text">Height:</string>
    <string name="profile_weight_text">Weight:</string>
    <string name="profile_address_text">Address:</string>
    <string name="profile_submit_button_text">Update Profile</string>
    <string name="profile_department_text">Department:</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="change_photo_dialog">ChangePhotoDialog</string>

    <string name="name">HeartBeat</string>
    <string name="default_text">000</string>
    <string name="unit">bpm</string>
    <string name="details">detail</string>
</resources>
