<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id= "@+id/nav_profile"
        android:title="@string/menu_item_1_patient"
        android:icon="@mipmap/baseline_person_black_24dp"
        />

    <item android:id= "@+id/nav_condition"
        android:title="@string/menu_item_2_patient"
        android:icon="@mipmap/baseline_local_hospital_black_24dp"
        />

    <item android:id= "@+id/nav_consult"
        android:title="@string/menu_item_3_patient"
        android:icon="@mipmap/baseline_contact_mail_black_24dp"
        />

    <item android:id= "@+id/nav_facilities"
        android:title="@string/menu_item_4_patient"
        android:icon="@mipmap/baseline_place_black_24dp"
        />

    <item android:id= "@+id/nav_feedback"
        android:title="@string/menu_item_5_patient"
        android:icon="@mipmap/baseline_inbox_black_24dp"
        />

    <item android:id= "@+id/nav_logout"
        android:title="@string/menu_item_6_patient"
        android:icon="@mipmap/baseline_exit_to_app_black_24dp"
        />

</menu>