<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_patient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userprofile.PatientProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/nav_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_top_user_profile">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:text="@string/profile_surname_text"/>

                <EditText
                    android:id="@+id/profileSurnameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:text="@string/profile_othername_text"/>

                <EditText
                    android:id="@+id/profileOtherNameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:text="@string/profile_gender_text"/>

                <EditText
                    android:id="@+id/profileGenderEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:text="@string/profile_age_text"/>

                <EditText
                    android:id="@+id/profileAgeEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:text="@string/profile_height_text"/>

                <EditText
                    android:id="@+id/profileHeightEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:text="@string/profile_weight_text"/>

                <EditText
                    android:id="@+id/profileWeightEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:text="@string/profile_address_text"/>

                <EditText
                    android:id="@+id/profileAddressEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_submit_button_text"/>

        </LinearLayout>

    </LinearLayout>



    <android.support.design.widget.NavigationView
        android:id="@+id/patientNv"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/patient_navigation_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_bar_action_header">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>