<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_doctor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userprofile.DoctorProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/doctor_nav_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_top_user_profile">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:text="@string/profile_surname_text"/>

                <EditText
                    android:id="@+id/doctorSurnameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:text="@string/profile_othername_text"/>

                <EditText
                    android:id="@+id/doctorOtherNameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:text="@string/profile_gender_text"/>

                <EditText
                    android:id="@+id/doctorDepartmentEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"/>

            </LinearLayout>




            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_submit_button_text"
                android:onClick="updateUserProfile"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/doctorNv"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/doctor_navigation_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/doctor_nav_bar_action_header">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>