<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_select"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/WhiteColor">

        <com.softwareapp.group9.doctorpatientapp.consultdoctor.ViewRing
            android:id="@+id/viewring"
            android:layout_width="330dp"
            android:layout_height="330dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="91dp" />

        <FrameLayout
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/text"
                        android:layout_width="fill_parent"
                        android:layout_height="120dp"
                        android:layout_gravity="center"
                        android:text="@string/default_text"
                        android:textSize="50sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">

                    <com.softwareapp.group9.doctorpatientapp.consultdoctor.HeartBeat
                        android:id="@+id/photo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"></com.softwareapp.group9.doctorpatientapp.consultdoctor.HeartBeat>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center"
                        android:text="@string/unit"
                        android:textSize="35sp" />
                </LinearLayout>
            </LinearLayout>


        </FrameLayout>

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="143dp"
            android:layout_marginBottom="4dp"
            android:text="Save" />

    </RelativeLayout>
    <SurfaceView
        android:id="@+id/preview"
        android:layout_width="2dp"
        android:layout_height="2dp" />
</LinearLayout>